Bug 509211 - Clicking on transaction dates in the reports is no longer doing anything
Summary: Clicking on transaction dates in the reports is no longer doing anything
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.2.1
Platform: Mint (Ubuntu based) Linux
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-06 20:48 UTC by lp.allard.1
Modified: 2025-09-09 06:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description lp.allard.1 2025-09-06 20:48:11 UTC
***
Clicking on transaction dates in the reports is no longer doing anything.  I am not sure when this bug appeared but I can confirm on 5.1 series, this was working fine but on the latest AppImage (4722 as of 2025-09-06) this is no longer working.  

When I click on the date of a transaction entry in any reports, KMM does nothing while it should bring me to the transaction in the proper ledger.

If I right click on a date and do "Copy Link Location", I see something like this:

/ledger?id=A001194&tid=T000000000000022541

SOFTWARE/OS VERSIONS
Linux/KDE Plasma:  Mint 22.2
KDE Plasma Version: N/A
KDE Frameworks Version: N/A
Qt Version: N/A

ADDITIONAL INFORMATION
Running "kmymoney-5.2-4722-linux-gcc-x86_64.AppImage"
Comment 1 Thomas Baumgart 2025-09-07 12:43:33 UTC
Git commit d91b4f36c29079012a4ec8a5914e6d7789b6edb5 by Thomas Baumgart.
Committed on 07/09/2025 at 11:14.
Pushed by tbaumgart into branch 'master'.

Add helper method to trigger QActions

On Qt6 QActions are disabled by default. This adds a helper method that
enables the action temporarily before triggering to gain Qt5 behavior
where needed.
FIXED-IN: 5.2.2

M  +1    -4    kmymoney/kmymoney.cpp
M  +11   -0    kmymoney/mymoney/mymoneyutils.cpp
M  +10   -0    kmymoney/mymoney/mymoneyutils.h
M  +1    -1    kmymoney/plugins/views/reports/kreportsview.cpp
M  +1    -4    kmymoney/views/kinvestmentview.cpp
M  +2    -1    kmymoney/views/ksearchtransactiondlg.cpp
M  +1    -4    kmymoney/views/reconciliationledgerviewpage.cpp

https://invent.kde.org/office/kmymoney/-/commit/d91b4f36c29079012a4ec8a5914e6d7789b6edb5
Comment 2 Thomas Baumgart 2025-09-09 06:01:11 UTC
Git commit b23ffc24e570fd0c69f0892c9a2d63233e919be8 by Thomas Baumgart.
Committed on 09/09/2025 at 06:01.
Pushed by tbaumgart into branch '5.2'.

Add helper method to trigger QActions

On Qt6 QActions are disabled by default. This adds a helper method that
enables the action temporarily before triggering to gain Qt5 behavior
where needed.
FIXED-IN: 5.2.2
(cherry picked from commit d91b4f36c29079012a4ec8a5914e6d7789b6edb5)

M  +1    -4    kmymoney/kmymoney.cpp
M  +11   -0    kmymoney/mymoney/mymoneyutils.cpp
M  +10   -0    kmymoney/mymoney/mymoneyutils.h
M  +1    -1    kmymoney/plugins/views/reports/kreportsview.cpp
M  +1    -4    kmymoney/views/kinvestmentview.cpp
M  +2    -1    kmymoney/views/ksearchtransactiondlg.cpp
M  +1    -4    kmymoney/views/reconciliationledgerviewpage.cpp

https://invent.kde.org/office/kmymoney/-/commit/b23ffc24e570fd0c69f0892c9a2d63233e919be8