Add helper method to trigger QActions

On Qt6 QActions are disabled by default. This adds a helper method that
enables the action temporarily before triggering to gain Qt5 behavior
where needed.

BUG: 509211
FIXED-IN: 5.2.2
(cherry picked from commit d91b4f36c29079012a4ec8a5914e6d7789b6edb5)